# HealthyHabitsDRF-SPA-

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
healthy_habits/: apps.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_0def72df66d8a9fd_0001_initial_py.html  z_0def72df66d8a9fd_0002_initial_py.html  z_0def72df66d8a9fd___init___py.html  z_1df033120bbcc412___init___py.html  z_1df033120bbcc412_csu_py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_celery_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_8b562f3fe71efc7d___init___py.html  z_a98ffbcc39c2c410___init___py.html  z_a98ffbcc39c2c410_admin_py.html  z_a98ffbcc39c2c410_apps_py.html  z_a98ffbcc39c2c410_models_py.html  z_a98ffbcc39c2c410_pagination_py.html  z_a98ffbcc39c2c410_serializers_py.html  z_a98ffbcc39c2c410_services_py.html  z_a98ffbcc39c2c410_tasks_py.html  z_a98ffbcc39c2c410_tests_py.html  z_a98ffbcc39c2c410_urls_py.html  z_a98ffbcc39c2c410_validators_py.html  z_a98ffbcc39c2c410_views_py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  (+5 more)
(+12 files in other folders)
